# eling

./: .gitignore  CREDITS.md  LICENSE  README.md  RELEASE_NOTES.md  json  pyproject.toml
.github/workflows/: ci.yml  publish.yml
continuum/: README.md  healthcheck.sh  install.sh  uninstall.sh
continuum/configs/: claude-code.json  codex.toml  hermes-markdownify.yaml  hermes.yaml  opencode.jsonc  zero.config.json
docs/: API.md  ARCHITECTURE.md  HOOKS.md  MIGRATION.md  ZERO.md
plugin/: __init__.py  plugin.yaml
prototypes/: __init__.py  debug_api.py  debug_env.py  temporal.py  test_e2e.py  vector_search.py  versioning.py
scripts/: create_release.py  migrate_holographic.py
src/eling/: __init__.py  brain.py  cli.py  compress.py  config.py  export.py  fact_memory_provider.py  hermes_plugin.py  hooks.py  mcp_server.py  permissions.py  plugin.yaml  privacy.py  rules.py  snapshot.py  spec_kit.py  verify_on_stop.py
src/eling/adapters/: __init__.py
src/eling/as_brain/: mcp_server.py
src/eling/continuum/: mcp_server.py  plot.py  store.py  worktree.py
src/eling/layers/: builtin.py  code.py  code_index.py  embeddings.py  facts.py  hrr.py  kb.py  notion.py  obsidian.py
src/eling/opencode_plugin/: eling-memory.js
src/eling/scripts/: benchmark.py
src/eling/zero_plugin/: SKILL.md  eling-hook.py
tests/: test_brain.py  test_builtin.py  test_cli.py  test_compress.py  test_continuum.py  test_contradiction.py  test_decay.py  test_export.py  test_facts.py  test_graph.py  test_hooks.py  test_kb.py  test_notion_retrieval.py  test_permissions.py  test_privacy.py  test_schema_packs.py  test_snapshot.py  test_sync.py  test_think.py  test_universal_brain.py  test_verify_on_stop.py
