[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eling"
version = "0.7.1"
description = "Lightweight memory, powerful retrieval — 5-tier memory, HRR reasoning, 22 MCP tools, temporal queries, per-fact versioning, vector search, Zettelkasten linking, memory evolution, spec-kit verification, conditional verify-on-stop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["memory", "mcp", "ai-agent", "second-brain", "hrr"]

authors = [
    {name = "PatrickNoFilter"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # numpy is optional — needed only for HRR.
    # Install via: pip install eling[hrr] or pip install eling[dev]
]

[project.optional-dependencies]
hrr = ["numpy>=1.24"]
embeddings = ["sentence-transformers>=3.0"]
all = ["eling[hrr,embeddings]"]
dev = [
    "eling[hrr]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eling-install-opencode = "eling.cli:_run_install_opencode_cli"
eling-install-zero = "eling.cli:_run_install_zero_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eling = ["opencode_plugin/*", "zero_plugin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
