[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eling"
version = "0.9.0"
description = "Unified second brain for AI agents — 5-tier memory, HRR reasoning, 41 MCP tools across 3 servers, Continuum Layer 6 multi-agent orchestration hub (Hermes/OpenCode/MiMo-Code/Zero/Claude Code/Codex), temporal queries, per-fact versioning, vector search, Zettelkasten, memory evolution, spec-kit verification, universal verify-on-stop, ELING_HOME override, handshake agent auto-attribution"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["memory", "mcp", "ai-agent", "second-brain", "hrr", "orchestration", "continuum", "multi-agent"]
authors = [
    {name = "PatrickNoFilter"},
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # numpy is optional — needed only for HRR.
    # Install via: pip install eling[hrr] or pip install eling[dev]
]

[project.optional-dependencies]
hrr = ["numpy>=1.24"]
embeddings = ["sentence-transformers>=3.0"]
all = ["eling[hrr,embeddings]"]
dev = [
    "eling[hrr]",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
eling-install-opencode = "eling.cli:_run_install_opencode_cli"
eling-install-zero = "eling.cli:_run_install_zero_cli"
eling-continuum = "eling.cli:_run_continuum_cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eling = ["opencode_plugin/*", "zero_plugin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[project.urls]
Homepage = "https://github.com/PatrickNoFilter/eling"
Repository = "https://github.com/PatrickNoFilter/eling"
Documentation = "https://github.com/PatrickNoFilter/eling#readme"
